# anchor-starter

./: Anchor.toml  package-lock.json
programs/prog/: Cargo.toml
programs/prog/src/: lib.rs
tests/: prog.ts
