[package]
name = "prog"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prog"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version="0.24.2", features=["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "1.9.28"
spl-token = "3.3.0"
